* Airmon-ng: remove grep -P references upon request.
* Airmon-ng: Do not replace driver name by ?????? when driver is valid. 
* Airgraph-ng: Removed irrelevant comment in README.
* Airdrop-ng: Updated lorcon2 installation instructions.
* Airdecloak-ng: Fixed segfault due to NULL pointer dereference.
* osdep: Remove wi_set_channel(1) on open wifi interface (cygwin).
* Patches: Created WPE patches and documentation for current HostAPd and Freeradius versions.
* Airodump-ng: Fix incorrect if conditions which always are false.
* Airodump-ng: Remove useless not NULL check.
* Airventriloquist: New tool from https://github.com/Caesurus/airventriloquist/
* dcrack: Fixed indentation.
* TravisCI: Fixed compilation on OSX.
* AppVeyor: Added support for AppVeyor, CI for cygwin builds.

Version 1.2-rc4 (changes from aircrack-ng 1.2-rc3) - Released 14 Feb 2016:
* Airodump-ng: Increase console window size.
* Aircrack-ng: Added time remaining and percentage done when doing WPA cracking with a dictionary (file).
* Aircrack-ng: Make benchmark last 15 seconds for a more accurate value.
* Aircrack-ng: Fixed compilation on Cygwin 64 and drastically improve cracking speed for all CPUs (up to +175% performance).
* Airmon-ng: Improved chipset detection on FreeBSD.
* Airmon-ng: Display chipset for some Broadcom SDIO.
* Airbase-ng: Fixed broadcasting 'default'.
* General: Updated and cleanup TravisCI file to test compilation and testing on OSX.
* General: Fixed reading large files on Cygwin.
* General: Fixed a bunch of compilation warnings with gcc and clang.
* General: Fixed compilation on Solaris, OpenBSD, DragonFlyBSD 4.4, NetBSD, OSX.
* General: Fixed compilation on ARM and MIPS.
* General: Improved compatibility on FreeBSD and Cygwin (RAM and CPU detection).
* General: Fixed gcc segfault on cygwin.
* General: Memory cleanups, fixed memory leaks and fix other issues reported by Valgrind.
* Testing: Fixes on various OSes.
* INSTALLING: Updated installation instructions for different OS.